--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-  
+  <div class="div div-1"></div>
+  <div class="div div-2"></div>
+  <div class="div div-3"></div>
+  <div class="div div-4"></div>
 </body>
 </html>
